appId: chat.rocket.reactnative
name: "Login Fail"
---
- startRecording:
    path: './recording/login_fail'
    label: 'Begin collecting test evidence'
- launchApp:
    label: "Launch app"
    clearState: true
    permissions:
      all: allow
- tapOn:
    id: new-server-view-input
- inputText:
    text: https://mobile.rocket.chat
- tapOn: Connect
- tapOn: Login
- tapOn:
    id: login-view-email
- inputText:
    text: rohit.bansal@gmail.com
- tapOn:
    id: login-view-password
- inputText:
    text: rohit.bansal@gmail.com
- tapOn:
    id: login-view
- tapOn:
    text: Login
    index: 1
- assertVisible: general1
- stopRecording