appId: chat.rocket.reactnative
---
- clearState
- launchApp
- tapOn:
    id: "new-server-view-input"
- inputText: "Hello"
- pressKey: Enter
- assertVisible:
    text: "Invalid workspace URL"