appId: chat.rocket.reactnative
name: "Join Channel"
jsEngine: graaljs
onFlowStart:
    - runScript: "../setup.js"
---
- launchApp
- tapOn:
    id: rooms-list-view-directory
- tapOn:
    id: directory-view-search
- inputText: detox-public
- tapOn:
    text: detox-public
    index: 1
- pressKey: Enter
- tapOn:
    id: room-view-join-button
- assertVisible: joined the channel